--- a/package.yaml
+++ b/package.yaml
@@ -25,6 +25,9 @@ library:
   source-dirs: src
   dependencies:
   - gi-arrow >= 0.0.1 && < 0.1
+  - gi-glib >=2.0.16 && <2.1
+  - bytestring >=0.10.8 && <0.11
+  - text >=1.2.3.0 && <1.3
 
 executables:
   hs-arrow-exe:
